--- a/src/pages/blog/2020-12-23-romero.md
+++ b/src/pages/blog/2020-12-23-romero.md
@@ -12,9 +12,10 @@ featuredimage: /img/romero.jpg
 tags:
   - tónicas
   - analgesica
-  - antibiotica - antiparasitaria
+  - antibiotica
+  - antiparasitaria
   - antidepresiva
-  - antiespasmodicas
+  - antiespasmodica
   - antiparasitaria
   - depurativas - diureticas
   - emenagogas
